--- a/manifests/Ambassador.yaml
+++ b/manifests/Ambassador.yaml
@@ -17,7 +17,7 @@ metadata:
   name: go-webserver-mapping
 spec:
   prefix: /
-  service: go-webserver:5000
+  service: go-webserver
 ---
 apiVersion: getambassador.io/v1
 kind: TLSContext
